Ajout Q4 (choix des categories) + suppression de categorie et taches associes

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -25,7 +25,10 @@ ons-splitter-side[side="left"][animation="overlay"] {
   color: #666
 }
 
-
+.hidden{
+  visibility: hidden;
+  position: absolute;
+}
 
 /********************
  *** Animation CSS ***
